--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,13 @@ dist/
 wheels/
 *.egg-info
 
+# System Files
+.DS_Store
+
 # Virtual environments
-.venv
+.venv/
+venv/
+env/
 
 # My Ignores
 data/
