--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = "~=3.12.0"
 dependencies = [
     "mediapipe>=0.10.21",
     "numpy>=1.26.4",
-    "opencv-python>=4.11.0.86",
+    "opencv-python-headless>=4.11.0.86",
     "scikit-learn>=1.7.2",
     "streamlit>=1.51.0",
 ]
